--- a/layoutstyle.css
+++ b/layoutstyle.css
@@ -12,7 +12,7 @@
 }
 .banner{
     height: 150px;
-    background-image: url();
+    background-image: url(/backgrd.png);
     background-repeat: repeat-x;
     line-height: 150px;
     text-align: center;
@@ -33,6 +33,7 @@
     width: 15%;
     background-color: aquamarine;
 }
+
 .right{
     width: 15%;
     background-color: aquamarine;
@@ -64,39 +65,78 @@
     height: 45%;
     margin-bottom: 20px;
 }
-.content>div>div{
-    width: 50%;
-    border: 3px solid gray;
-    padding: 10px;
-    height: 90%;
 
-    margin: 10px;
-    border-radius: 0 50px;
+.content>div>div{
+   width: 50%;
+   border: 3px solid gray;
+   height: 90%;
+   padding: 10px;
+    margin: 2px;
+
 }
+
+.content div div div a img{
+    width: 100%;
+    height: 200px;
+}
+
 .footer{
     height: 50px;
-    background-color: #0000ff;
+    background-color: blue;
     text-align: center;
     color: yellow;
     line-height: 50px;
 }
+
 .menu li{
     background-color: darkcyan;
 }
+
 .menu a{
     text-decoration: none;
     display: block;
     color: white;
 }
+
 .menu a:hover{
-    background-color: cornflowerblue;
+    background-color: rgb(0, 217, 255);
 }
-.menu li{
+
+.menu li {
     display: inline-block;
     width: 120px;
     position: relative;
 }
+
 .menu li .submenu{
     display: none;
     position: absolute;
+}
+
+.banner h1{
+    text-shadow: 5px 5px 3px red;
+}
+
+ol.contentlist{
+    list-style-type: none;
+}
+
+.content h2{
+    text-align: center;
+    color : lightblue;
+}
+
+ol.contentlist li{
+    margin-top: 10px;
+}
+
+ol.contentlist a{
+    text-decoration: none;
+    color: greenyellow;
+    margin-top: 15px;
+}
+
+ol.contentlist a:hover{
+    font-size: 1.1em;
+    color:red;
 }
